# manifold-knn

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: index_build.rs
docs/: algorithm.md
examples/: basic.rs  delaunay3d.rs
src/: bounded.rs  delaunay3d.rs  error.rs  lib.rs  table.rs
tests/: allocations.rs  delaunay3d.rs  exactness.rs
