[package]
name = "manifold-knn"
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
description = "Dynamic-programming k-nearest-neighbor queries over birth-ordered point clouds, with optional 3D Delaunay construction."
readme = "README.md"
license = "MIT"
keywords = ["knn", "nearest-neighbor", "point-cloud", "geometry", "manifold"]
categories = ["algorithms", "science"]
exclude = [".github/"]

[lib]
name = "manifold_knn"
path = "src/lib.rs"

[features]
default = []
delaunay-3d = ["dep:delaunay"]
parallel = ["dep:rayon"]

[dependencies]
delaunay = { version = "=0.7.8", optional = true }
rayon = { version = "1.10", optional = true }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "index_build"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
