[package]
name = "manifold-knn"
version = "0.6.2"
edition = "2024"
rust-version = "1.95"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]
description = "Dynamic-programming k-nearest-neighbor queries over birth-ordered point clouds, with optional 3D Delaunay construction."
readme = "README.md"
repository = "https://github.com/RustedBytes/manifold-knn"
license = "MIT"
keywords = ["knn", "nearest-neighbor", "point-cloud", "geometry", "manifold"]
categories = ["algorithms", "science"]
exclude = [".github/"]

[lib]
name = "manifold_knn"
path = "src/lib.rs"

[features]
default = []
delaunay-3d = ["dep:delaunay"]
parallel = ["dep:rayon"]
simd = []

[dependencies]
delaunay = { version = "=0.7.8", optional = true }
rayon = { version = "1.10", optional = true }

[package.metadata.docs.rs]
features = ["delaunay-3d", "parallel"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "index_build"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
